cleaning up conf file

--- a/conf/application.ini
+++ b/conf/application.ini
@@ -12,13 +12,13 @@ resources.layout.layoutPath = APPLICATION_PATH "/v/layouts"
 
 
 webroot                                 = "/"
-fileroot                                = /var/www/template.indiephoria.com/
+fileroot                                = /var/www/mumblr/
 login_default_page                      = '/'
 
 auth.salt                               = 'temptaco'
 
 log.level                               = WARN
-log.file                                = /var/www/template.indiephoria.com/log/app_log
+log.file                                = /var/www/mumblr/log/app_log
 log.firephp                             = 0
 
 db.primary.adapter           = PDO_MYSQL
@@ -34,7 +34,7 @@ db.couch.params.dbname     = template
 db.couch.design            = zebu
 
 login.timeoutMinutes       = 45
-google.maps.api_key        = "ABQIAAAAtiVvG3-nfgMjcTDvXYmqPxTCa2-ovMacbr5ViMIBrnBq78EaJxQsb14J9fR9JOOD2Q3JQJ7OjpMEqA"
+google.maps.api_key        = 
 google.maps.default_width  = 500
 google.maps.default_height = 400
 google.maps.show_control   = true
